syntax = "proto3";

package tasks;

service TaskService {
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
    rpc UpdateTask (UpdateTaskRequest) returns (EmptyMessage);
    rpc DeleteTask (DeleteTaskRequest) returns (EmptyMessage);
    rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
    rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
}

message EmptyMessage {
}

message CreateTaskRequest {
    int32 author_id = 1;
    string text = 2;
}

message CreateTaskResponse {
    int32 task_id = 1;
}

message UpdateTaskRequest {
    int32 user_id = 1;
    int32 task_id = 2;
    string new_text = 3;
}

message DeleteTaskRequest {
    int32 user_id = 1;
    int32 task_id = 2;
}

message GetTaskRequest {
    int32 user_id = 1;
    int32 task_id = 2;
}

message GetTaskResponse {
    int32 task_id = 1;
    int32 author_id = 2;
    string text = 3;
}

message ListTasksRequest {
    int32 user_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message ListTasksResponse {
    repeated Task tasks = 1;
}

message Task {
    int32 task_id = 1;
    int32 author_id = 2;
    string text = 3;
}
